// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Accordion Default 1`] = `
<article
  className="css-1fqbdip"
>
  <h1
    className="css-nil"
  >
    Welcome to storybook
  </h1>
  <p>
    This is a UI component dev environment for your app.
  </p>
  <p>
    We've added some basic stories inside the 
    <code
      className="css-mteq83"
    >
      src/stories
    </code>
     directory.
    <br />
    A story is a single state of one or more UI components. You can have as many stories as you want.
    <br />
    (Basically a story is like a visual test case.)
  </p>
  <p>
    See these sample
     
    <a
      className="css-ca0824"
      href="/"
      onClick={[Function]}
    >
      stories
    </a>
     
    for a component called 
    <code
      className="css-mteq83"
    >
      Button
    </code>
    .
  </p>
  <p>
    Just like that, you can add your own components as stories.
    <br />
    You can also edit those components and see changes right away.
    <br />
    (Try editing the 
    <code
      className="css-mteq83"
    >
      Button
    </code>
     stories located at
     
    <code
      className="css-mteq83"
    >
      src/stories/index.js
    </code>
    .)
  </p>
  <p>
    Usually we create stories with smaller UI components in the app.
    <br />
    Have a look at the
     
    <a
      className="css-ca0824"
      href="https://storybook.js.org/basics/writing-stories"
      rel="noopener noreferrer"
      target="_blank"
    >
      Writing Stories
    </a>
     
    section in our documentation.
  </p>
  <p
    className="css-bwdon3"
  >
    <b>
      NOTE:
    </b>
    <br />
    Have a look at the 
    <code
      className="css-mteq83"
    >
      .storybook/webpack.config.js
    </code>
     to add webpack loaders and plugins you are using in this project.
  </p>
</article>
`;

exports[`Storyshots Cards/Answers Default 1`] = `
<article
  className="css-1fqbdip"
>
  <h1
    className="css-nil"
  >
    Welcome to storybook
  </h1>
  <p>
    This is a UI component dev environment for your app.
  </p>
  <p>
    We've added some basic stories inside the 
    <code
      className="css-mteq83"
    >
      src/stories
    </code>
     directory.
    <br />
    A story is a single state of one or more UI components. You can have as many stories as you want.
    <br />
    (Basically a story is like a visual test case.)
  </p>
  <p>
    See these sample
     
    <a
      className="css-ca0824"
      href="/"
      onClick={[Function]}
    >
      stories
    </a>
     
    for a component called 
    <code
      className="css-mteq83"
    >
      Button
    </code>
    .
  </p>
  <p>
    Just like that, you can add your own components as stories.
    <br />
    You can also edit those components and see changes right away.
    <br />
    (Try editing the 
    <code
      className="css-mteq83"
    >
      Button
    </code>
     stories located at
     
    <code
      className="css-mteq83"
    >
      src/stories/index.js
    </code>
    .)
  </p>
  <p>
    Usually we create stories with smaller UI components in the app.
    <br />
    Have a look at the
     
    <a
      className="css-ca0824"
      href="https://storybook.js.org/basics/writing-stories"
      rel="noopener noreferrer"
      target="_blank"
    >
      Writing Stories
    </a>
     
    section in our documentation.
  </p>
  <p
    className="css-bwdon3"
  >
    <b>
      NOTE:
    </b>
    <br />
    Have a look at the 
    <code
      className="css-mteq83"
    >
      .storybook/webpack.config.js
    </code>
     to add webpack loaders and plugins you are using in this project.
  </p>
</article>
`;

exports[`Storyshots Cards/Category Card Default 1`] = `
<article
  className="css-1fqbdip"
>
  <h1
    className="css-nil"
  >
    Welcome to storybook
  </h1>
  <p>
    This is a UI component dev environment for your app.
  </p>
  <p>
    We've added some basic stories inside the 
    <code
      className="css-mteq83"
    >
      src/stories
    </code>
     directory.
    <br />
    A story is a single state of one or more UI components. You can have as many stories as you want.
    <br />
    (Basically a story is like a visual test case.)
  </p>
  <p>
    See these sample
     
    <a
      className="css-ca0824"
      href="/"
      onClick={[Function]}
    >
      stories
    </a>
     
    for a component called 
    <code
      className="css-mteq83"
    >
      Button
    </code>
    .
  </p>
  <p>
    Just like that, you can add your own components as stories.
    <br />
    You can also edit those components and see changes right away.
    <br />
    (Try editing the 
    <code
      className="css-mteq83"
    >
      Button
    </code>
     stories located at
     
    <code
      className="css-mteq83"
    >
      src/stories/index.js
    </code>
    .)
  </p>
  <p>
    Usually we create stories with smaller UI components in the app.
    <br />
    Have a look at the
     
    <a
      className="css-ca0824"
      href="https://storybook.js.org/basics/writing-stories"
      rel="noopener noreferrer"
      target="_blank"
    >
      Writing Stories
    </a>
     
    section in our documentation.
  </p>
  <p
    className="css-bwdon3"
  >
    <b>
      NOTE:
    </b>
    <br />
    Have a look at the 
    <code
      className="css-mteq83"
    >
      .storybook/webpack.config.js
    </code>
     to add webpack loaders and plugins you are using in this project.
  </p>
</article>
`;

exports[`Storyshots Cards/Product Card Default 1`] = `
<article
  className="css-1fqbdip"
>
  <h1
    className="css-nil"
  >
    Welcome to storybook
  </h1>
  <p>
    This is a UI component dev environment for your app.
  </p>
  <p>
    We've added some basic stories inside the 
    <code
      className="css-mteq83"
    >
      src/stories
    </code>
     directory.
    <br />
    A story is a single state of one or more UI components. You can have as many stories as you want.
    <br />
    (Basically a story is like a visual test case.)
  </p>
  <p>
    See these sample
     
    <a
      className="css-ca0824"
      href="/"
      onClick={[Function]}
    >
      stories
    </a>
     
    for a component called 
    <code
      className="css-mteq83"
    >
      Button
    </code>
    .
  </p>
  <p>
    Just like that, you can add your own components as stories.
    <br />
    You can also edit those components and see changes right away.
    <br />
    (Try editing the 
    <code
      className="css-mteq83"
    >
      Button
    </code>
     stories located at
     
    <code
      className="css-mteq83"
    >
      src/stories/index.js
    </code>
    .)
  </p>
  <p>
    Usually we create stories with smaller UI components in the app.
    <br />
    Have a look at the
     
    <a
      className="css-ca0824"
      href="https://storybook.js.org/basics/writing-stories"
      rel="noopener noreferrer"
      target="_blank"
    >
      Writing Stories
    </a>
     
    section in our documentation.
  </p>
  <p
    className="css-bwdon3"
  >
    <b>
      NOTE:
    </b>
    <br />
    Have a look at the 
    <code
      className="css-mteq83"
    >
      .storybook/webpack.config.js
    </code>
     to add webpack loaders and plugins you are using in this project.
  </p>
</article>
`;

exports[`Storyshots Cards/Questions Default 1`] = `
<article
  className="css-1fqbdip"
>
  <h1
    className="css-nil"
  >
    Welcome to storybook
  </h1>
  <p>
    This is a UI component dev environment for your app.
  </p>
  <p>
    We've added some basic stories inside the 
    <code
      className="css-mteq83"
    >
      src/stories
    </code>
     directory.
    <br />
    A story is a single state of one or more UI components. You can have as many stories as you want.
    <br />
    (Basically a story is like a visual test case.)
  </p>
  <p>
    See these sample
     
    <a
      className="css-ca0824"
      href="/"
      onClick={[Function]}
    >
      stories
    </a>
     
    for a component called 
    <code
      className="css-mteq83"
    >
      Button
    </code>
    .
  </p>
  <p>
    Just like that, you can add your own components as stories.
    <br />
    You can also edit those components and see changes right away.
    <br />
    (Try editing the 
    <code
      className="css-mteq83"
    >
      Button
    </code>
     stories located at
     
    <code
      className="css-mteq83"
    >
      src/stories/index.js
    </code>
    .)
  </p>
  <p>
    Usually we create stories with smaller UI components in the app.
    <br />
    Have a look at the
     
    <a
      className="css-ca0824"
      href="https://storybook.js.org/basics/writing-stories"
      rel="noopener noreferrer"
      target="_blank"
    >
      Writing Stories
    </a>
     
    section in our documentation.
  </p>
  <p
    className="css-bwdon3"
  >
    <b>
      NOTE:
    </b>
    <br />
    Have a look at the 
    <code
      className="css-mteq83"
    >
      .storybook/webpack.config.js
    </code>
     to add webpack loaders and plugins you are using in this project.
  </p>
</article>
`;

exports[`Storyshots Search Default 1`] = `
<article
  className="css-1fqbdip"
>
  <h1
    className="css-nil"
  >
    Welcome to storybook
  </h1>
  <p>
    This is a UI component dev environment for your app.
  </p>
  <p>
    We've added some basic stories inside the 
    <code
      className="css-mteq83"
    >
      src/stories
    </code>
     directory.
    <br />
    A story is a single state of one or more UI components. You can have as many stories as you want.
    <br />
    (Basically a story is like a visual test case.)
  </p>
  <p>
    See these sample
     
    <a
      className="css-ca0824"
      href="/"
      onClick={[Function]}
    >
      stories
    </a>
     
    for a component called 
    <code
      className="css-mteq83"
    >
      Button
    </code>
    .
  </p>
  <p>
    Just like that, you can add your own components as stories.
    <br />
    You can also edit those components and see changes right away.
    <br />
    (Try editing the 
    <code
      className="css-mteq83"
    >
      Button
    </code>
     stories located at
     
    <code
      className="css-mteq83"
    >
      src/stories/index.js
    </code>
    .)
  </p>
  <p>
    Usually we create stories with smaller UI components in the app.
    <br />
    Have a look at the
     
    <a
      className="css-ca0824"
      href="https://storybook.js.org/basics/writing-stories"
      rel="noopener noreferrer"
      target="_blank"
    >
      Writing Stories
    </a>
     
    section in our documentation.
  </p>
  <p
    className="css-bwdon3"
  >
    <b>
      NOTE:
    </b>
    <br />
    Have a look at the 
    <code
      className="css-mteq83"
    >
      .storybook/webpack.config.js
    </code>
     to add webpack loaders and plugins you are using in this project.
  </p>
</article>
`;

exports[`Storyshots Styles Alignment 1`] = `
<article
  className="css-1fqbdip"
>
  <h1
    className="css-nil"
  >
    Welcome to storybook
  </h1>
  <p>
    This is a UI component dev environment for your app.
  </p>
  <p>
    We've added some basic stories inside the 
    <code
      className="css-mteq83"
    >
      src/stories
    </code>
     directory.
    <br />
    A story is a single state of one or more UI components. You can have as many stories as you want.
    <br />
    (Basically a story is like a visual test case.)
  </p>
  <p>
    See these sample
     
    <button
      className="css-1opliz7"
      onClick={[Function]}
    >
      stories
    </button>
     
    for a component called 
    <code
      className="css-mteq83"
    >
      Button
    </code>
    .
  </p>
  <p>
    Just like that, you can add your own components as stories.
    <br />
    You can also edit those components and see changes right away.
    <br />
    (Try editing the 
    <code
      className="css-mteq83"
    >
      Button
    </code>
     stories located at
     
    <code
      className="css-mteq83"
    >
      src/stories/index.js
    </code>
    .)
  </p>
  <p>
    Usually we create stories with smaller UI components in the app.
    <br />
    Have a look at the
     
    <a
      className="css-ca0824"
      href="https://storybook.js.org/basics/writing-stories"
      rel="noopener noreferrer"
      target="_blank"
    >
      Writing Stories
    </a>
     
    section in our documentation.
  </p>
  <p
    className="css-bwdon3"
  >
    <b>
      NOTE:
    </b>
    <br />
    Have a look at the 
    <code
      className="css-mteq83"
    >
      .storybook/webpack.config.js
    </code>
     to add webpack loaders and plugins you are using in this project.
  </p>
</article>
`;

exports[`Storyshots Styles Breadcrumbs 1`] = `
<article
  className="css-1fqbdip"
>
  <h1
    className="css-nil"
  >
    Welcome to storybook
  </h1>
  <p>
    This is a UI component dev environment for your app.
  </p>
  <p>
    We've added some basic stories inside the 
    <code
      className="css-mteq83"
    >
      src/stories
    </code>
     directory.
    <br />
    A story is a single state of one or more UI components. You can have as many stories as you want.
    <br />
    (Basically a story is like a visual test case.)
  </p>
  <p>
    See these sample
     
    <button
      className="css-1opliz7"
      onClick={[Function]}
    >
      stories
    </button>
     
    for a component called 
    <code
      className="css-mteq83"
    >
      Button
    </code>
    .
  </p>
  <p>
    Just like that, you can add your own components as stories.
    <br />
    You can also edit those components and see changes right away.
    <br />
    (Try editing the 
    <code
      className="css-mteq83"
    >
      Button
    </code>
     stories located at
     
    <code
      className="css-mteq83"
    >
      src/stories/index.js
    </code>
    .)
  </p>
  <p>
    Usually we create stories with smaller UI components in the app.
    <br />
    Have a look at the
     
    <a
      className="css-ca0824"
      href="https://storybook.js.org/basics/writing-stories"
      rel="noopener noreferrer"
      target="_blank"
    >
      Writing Stories
    </a>
     
    section in our documentation.
  </p>
  <p
    className="css-bwdon3"
  >
    <b>
      NOTE:
    </b>
    <br />
    Have a look at the 
    <code
      className="css-mteq83"
    >
      .storybook/webpack.config.js
    </code>
     to add webpack loaders and plugins you are using in this project.
  </p>
</article>
`;

exports[`Storyshots Styles Buttons 1`] = `
<article
  className="css-1fqbdip"
>
  <h1
    className="css-nil"
  >
    Welcome to storybook
  </h1>
  <p>
    This is a UI component dev environment for your app.
  </p>
  <p>
    We've added some basic stories inside the 
    <code
      className="css-mteq83"
    >
      src/stories
    </code>
     directory.
    <br />
    A story is a single state of one or more UI components. You can have as many stories as you want.
    <br />
    (Basically a story is like a visual test case.)
  </p>
  <p>
    See these sample
     
    <button
      className="css-1opliz7"
      onClick={[Function]}
    >
      stories
    </button>
     
    for a component called 
    <code
      className="css-mteq83"
    >
      Button
    </code>
    .
  </p>
  <p>
    Just like that, you can add your own components as stories.
    <br />
    You can also edit those components and see changes right away.
    <br />
    (Try editing the 
    <code
      className="css-mteq83"
    >
      Button
    </code>
     stories located at
     
    <code
      className="css-mteq83"
    >
      src/stories/index.js
    </code>
    .)
  </p>
  <p>
    Usually we create stories with smaller UI components in the app.
    <br />
    Have a look at the
     
    <a
      className="css-ca0824"
      href="https://storybook.js.org/basics/writing-stories"
      rel="noopener noreferrer"
      target="_blank"
    >
      Writing Stories
    </a>
     
    section in our documentation.
  </p>
  <p
    className="css-bwdon3"
  >
    <b>
      NOTE:
    </b>
    <br />
    Have a look at the 
    <code
      className="css-mteq83"
    >
      .storybook/webpack.config.js
    </code>
     to add webpack loaders and plugins you are using in this project.
  </p>
</article>
`;

exports[`Storyshots Styles Colors 1`] = `
<article
  className="css-1fqbdip"
>
  <h1
    className="css-nil"
  >
    Welcome to storybook
  </h1>
  <p>
    This is a UI component dev environment for your app.
  </p>
  <p>
    We've added some basic stories inside the 
    <code
      className="css-mteq83"
    >
      src/stories
    </code>
     directory.
    <br />
    A story is a single state of one or more UI components. You can have as many stories as you want.
    <br />
    (Basically a story is like a visual test case.)
  </p>
  <p>
    See these sample
     
    <button
      className="css-1opliz7"
      onClick={[Function]}
    >
      stories
    </button>
     
    for a component called 
    <code
      className="css-mteq83"
    >
      Button
    </code>
    .
  </p>
  <p>
    Just like that, you can add your own components as stories.
    <br />
    You can also edit those components and see changes right away.
    <br />
    (Try editing the 
    <code
      className="css-mteq83"
    >
      Button
    </code>
     stories located at
     
    <code
      className="css-mteq83"
    >
      src/stories/index.js
    </code>
    .)
  </p>
  <p>
    Usually we create stories with smaller UI components in the app.
    <br />
    Have a look at the
     
    <a
      className="css-ca0824"
      href="https://storybook.js.org/basics/writing-stories"
      rel="noopener noreferrer"
      target="_blank"
    >
      Writing Stories
    </a>
     
    section in our documentation.
  </p>
  <p
    className="css-bwdon3"
  >
    <b>
      NOTE:
    </b>
    <br />
    Have a look at the 
    <code
      className="css-mteq83"
    >
      .storybook/webpack.config.js
    </code>
     to add webpack loaders and plugins you are using in this project.
  </p>
</article>
`;

exports[`Storyshots Styles Design Tokens 1`] = `
<div>
  <link
    crossorigin="anonymous"
    href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
    rel="stylesheet"
  />
  <div
    style={
      Object {
        "padding": "10px",
      }
    }
  >
    <h3>
      Design Tokens
    </h3>
    <p>
      Design tokens are the visual design atoms of the design system — specifically, they are named entities that store visual design attributes. We use them in place of hard-coded values (such as hex values for color or pixel values for spacing) in order to maintain a scalable and consistent visual system for UI development.
    </p>
    <table
      className="table table-bordered"
    >
      <tr
        className="table-active"
      >
        <th>
          Name
        </th>
        <th>
          Value
        </th>
        <th>
          Example
        </th>
      </tr>
      <tr>
        <td>
          white
        </td>
        <td>
          #ffffff
        </td>
        <td>
          <span
            className="bg-white"
            style={
              Object {
                "borderRadius": "3px",
                "display": "inline-block",
                "height": "30px",
                "width": "30px",
              }
            }
          />
          <span
            className="text-white"
          >
            Lorem Ipsum
          </span>
        </td>
      </tr>
      <tr>
        <td>
          pale-grey
        </td>
        <td>
          #f7f7fa
        </td>
        <td>
          <span
            className="bg-pale-grey"
            style={
              Object {
                "borderRadius": "3px",
                "display": "inline-block",
                "height": "30px",
                "width": "30px",
              }
            }
          />
          <span
            className="text-pale-grey"
          >
            Lorem Ipsum
          </span>
        </td>
      </tr>
      <tr>
        <td>
          pale-grey-two
        </td>
        <td>
          #f0f0f5
        </td>
        <td>
          <span
            className="bg-pale-grey-two"
            style={
              Object {
                "borderRadius": "3px",
                "display": "inline-block",
                "height": "30px",
                "width": "30px",
              }
            }
          />
          <span
            className="text-pale-grey-two"
          >
            Lorem Ipsum
          </span>
        </td>
      </tr>
      <tr>
        <td>
          cool-grey-two
        </td>
        <td>
          #b4b4be
        </td>
        <td>
          <span
            className="bg-cool-grey-two"
            style={
              Object {
                "borderRadius": "3px",
                "display": "inline-block",
                "height": "30px",
                "width": "30px",
              }
            }
          />
          <span
            className="text-cool-grey-two"
          >
            Lorem Ipsum
          </span>
        </td>
      </tr>
      <tr>
        <td>
          cool-grey
        </td>
        <td>
          #9191a3
        </td>
        <td>
          <span
            className="bg-cool-grey"
            style={
              Object {
                "borderRadius": "3px",
                "display": "inline-block",
                "height": "30px",
                "width": "30px",
              }
            }
          />
          <span
            className="text-cool-grey"
          >
            Lorem Ipsum
          </span>
        </td>
      </tr>
      <tr>
        <td>
          steel
        </td>
        <td>
          #787887
        </td>
        <td>
          <span
            className="bg-steel"
            style={
              Object {
                "borderRadius": "3px",
                "display": "inline-block",
                "height": "30px",
                "width": "30px",
              }
            }
          />
          <span
            className="text-steel"
          >
            Lorem Ipsum
          </span>
        </td>
      </tr>
      <tr>
        <td>
          greyish-brown
        </td>
        <td>
          #4a4a4a
        </td>
        <td>
          <span
            className="bg-greyish-brown"
            style={
              Object {
                "borderRadius": "3px",
                "display": "inline-block",
                "height": "30px",
                "width": "30px",
              }
            }
          />
          <span
            className="text-greyish-brown"
          >
            Lorem Ipsum
          </span>
        </td>
      </tr>
      <tr>
        <td>
          charcoal-grey-two
        </td>
        <td>
          #414146
        </td>
        <td>
          <span
            className="bg-charcoal-grey-two"
            style={
              Object {
                "borderRadius": "3px",
                "display": "inline-block",
                "height": "30px",
                "width": "30px",
              }
            }
          />
          <span
            className="text-charcoal-grey-two"
          >
            Lorem Ipsum
          </span>
        </td>
      </tr>
      <tr>
        <td>
          charcoal-grey
        </td>
        <td>
          #2d2d32
        </td>
        <td>
          <span
            className="bg-charcoal-grey"
            style={
              Object {
                "borderRadius": "3px",
                "display": "inline-block",
                "height": "30px",
                "width": "30px",
              }
            }
          />
          <span
            className="text-charcoal-grey"
          >
            Lorem Ipsum
          </span>
        </td>
      </tr>
      <tr>
        <td>
          dusk-blue
        </td>
        <td>
          #28328c
        </td>
        <td>
          <span
            className="bg-dusk-blue"
            style={
              Object {
                "borderRadius": "3px",
                "display": "inline-block",
                "height": "30px",
                "width": "30px",
              }
            }
          />
          <span
            className="text-dusk-blue"
          >
            Lorem Ipsum
          </span>
        </td>
      </tr>
      <tr>
        <td>
          azure
        </td>
        <td>
          #1ebef0
        </td>
        <td>
          <span
            className="bg-azure"
            style={
              Object {
                "borderRadius": "3px",
                "display": "inline-block",
                "height": "30px",
                "width": "30px",
              }
            }
          />
          <span
            className="text-azure"
          >
            Lorem Ipsum
          </span>
        </td>
      </tr>
      <tr>
        <td>
          azure-two
        </td>
        <td>
          #14bef0
        </td>
        <td>
          <span
            className="bg-azure-two"
            style={
              Object {
                "borderRadius": "3px",
                "display": "inline-block",
                "height": "30px",
                "width": "30px",
              }
            }
          />
          <span
            className="text-azure-two"
          >
            Lorem Ipsum
          </span>
        </td>
      </tr>
      <tr>
        <td>
          true-green
        </td>
        <td>
          #00a500
        </td>
        <td>
          <span
            className="bg-true-green"
            style={
              Object {
                "borderRadius": "3px",
                "display": "inline-block",
                "height": "30px",
                "width": "30px",
              }
            }
          />
          <span
            className="text-true-green"
          >
            Lorem Ipsum
          </span>
        </td>
      </tr>
      <tr>
        <td>
          black
        </td>
        <td>
          #000000
        </td>
        <td>
          <span
            className="bg-black"
            style={
              Object {
                "borderRadius": "3px",
                "display": "inline-block",
                "height": "30px",
                "width": "30px",
              }
            }
          />
          <span
            className="text-black"
          >
            Lorem Ipsum
          </span>
        </td>
      </tr>
    </table>
  </div>
</div>
`;

exports[`Storyshots Styles Icons 1`] = `
<article
  className="css-1fqbdip"
>
  <h1
    className="css-nil"
  >
    Welcome to storybook
  </h1>
  <p>
    This is a UI component dev environment for your app.
  </p>
  <p>
    We've added some basic stories inside the 
    <code
      className="css-mteq83"
    >
      src/stories
    </code>
     directory.
    <br />
    A story is a single state of one or more UI components. You can have as many stories as you want.
    <br />
    (Basically a story is like a visual test case.)
  </p>
  <p>
    See these sample
     
    <button
      className="css-1opliz7"
      onClick={[Function]}
    >
      stories
    </button>
     
    for a component called 
    <code
      className="css-mteq83"
    >
      Button
    </code>
    .
  </p>
  <p>
    Just like that, you can add your own components as stories.
    <br />
    You can also edit those components and see changes right away.
    <br />
    (Try editing the 
    <code
      className="css-mteq83"
    >
      Button
    </code>
     stories located at
     
    <code
      className="css-mteq83"
    >
      src/stories/index.js
    </code>
    .)
  </p>
  <p>
    Usually we create stories with smaller UI components in the app.
    <br />
    Have a look at the
     
    <a
      className="css-ca0824"
      href="https://storybook.js.org/basics/writing-stories"
      rel="noopener noreferrer"
      target="_blank"
    >
      Writing Stories
    </a>
     
    section in our documentation.
  </p>
  <p
    className="css-bwdon3"
  >
    <b>
      NOTE:
    </b>
    <br />
    Have a look at the 
    <code
      className="css-mteq83"
    >
      .storybook/webpack.config.js
    </code>
     to add webpack loaders and plugins you are using in this project.
  </p>
</article>
`;

exports[`Storyshots Styles Typography 1`] = `
<article
  className="css-1fqbdip"
>
  <h1
    className="css-nil"
  >
    Welcome to storybook
  </h1>
  <p>
    This is a UI component dev environment for your app.
  </p>
  <p>
    We've added some basic stories inside the 
    <code
      className="css-mteq83"
    >
      src/stories
    </code>
     directory.
    <br />
    A story is a single state of one or more UI components. You can have as many stories as you want.
    <br />
    (Basically a story is like a visual test case.)
  </p>
  <p>
    See these sample
     
    <button
      className="css-1opliz7"
      onClick={[Function]}
    >
      stories
    </button>
     
    for a component called 
    <code
      className="css-mteq83"
    >
      Button
    </code>
    .
  </p>
  <p>
    Just like that, you can add your own components as stories.
    <br />
    You can also edit those components and see changes right away.
    <br />
    (Try editing the 
    <code
      className="css-mteq83"
    >
      Button
    </code>
     stories located at
     
    <code
      className="css-mteq83"
    >
      src/stories/index.js
    </code>
    .)
  </p>
  <p>
    Usually we create stories with smaller UI components in the app.
    <br />
    Have a look at the
     
    <a
      className="css-ca0824"
      href="https://storybook.js.org/basics/writing-stories"
      rel="noopener noreferrer"
      target="_blank"
    >
      Writing Stories
    </a>
     
    section in our documentation.
  </p>
  <p
    className="css-bwdon3"
  >
    <b>
      NOTE:
    </b>
    <br />
    Have a look at the 
    <code
      className="css-mteq83"
    >
      .storybook/webpack.config.js
    </code>
     to add webpack loaders and plugins you are using in this project.
  </p>
</article>
`;
